Updated program to scrape pdufa decisions from web and submit call and put orders based on upcoming decisions in two weeks

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 /include
 /lib
 /data/studies.json
+src/data_inflows/demo_pdufa_data.py
 /src/config/config.py
 /data
-/src/utils
+/src/utils/load_companies.py
+/src/utils/clinical_trials_search_example.py
 __pycache__/
 
 pyvenv.cfg
